--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="">
-    <script src=""></script>
+    <script src="dist/bundle.js"></script>
 </head>
 
 <body>
-    Hello, World!
+    <p id="helloworld">???</p>
 </body>
 
 </html>
