CSS和图像资源的导入

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="">
-    <script src="dist/bundle.js"></script>
 </head>
 
 <body>
-    <p id="helloworld">???</p>
+    <h1 id="helloworld">???</h1>
 </body>
 
 </html>
