--- a/src/pages/page2/zh.html
+++ b/src/pages/page2/zh.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page 1</title>
+  <title>页面 2</title>
 </head>
 <body>
-  <h1>Welcome to Page 1</h1>
+  <h1>欢迎来到页面 2</h1>
+  <img src="../assets/images/ice-cream.svg" alt="Logo" />
 </body>
 </html>
