--- a/src/pages/page2/zh.html
+++ b/src/pages/page2/zh.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>欢迎来到页面 2</h1>
-  <img src="../assets/images/ice-cream.svg" alt="Logo" />
+  <img src="<%= require('../../assets/images/ok.png') %>" alt="OK">
 </body>
 </html>
