--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page 2</title>
+  <title>页面 2</title>
 </head>
 <body>
-  <h1>Welcome to Page 2</h1>
+  <h1><%= config.welcomeMessage %>2</h1>
   <img src="<%= require('../../assets/images/ok.png') %>" alt="OK">
 </body>
 </html>
