全部符合 ESM 语法

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>页面 2</title>
+  <title><%= config.welcomeMessage %>2</title>
 </head>
 <body>
   <h1><%= config.welcomeMessage %>2</h1>
